--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="titulo">
-        <h1>ESCALADA VALLE DE LOS CONDORES</h1>
+        <h1>ESCALADA <br> VALLE DE LOS <br> CONDORES</h1>
     </div>
     <hr>
     <div class="grid">
