Se corrigen problemas en el Script

--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
                 <input type="text" id="apellidos" placeholder="Ingresa apellidos"></input>
 
                 <label>Edad</label>
-                <input type="text" id="edad" placeholder="Ingresa tu edad"></input>
+                <input type="number" id="edad" placeholder="Ingresa tu edad"></input>
 
                 <label>Correo</label>
                 <input type="text" id="email" placeholder="Ingresa un Correo"></input>
 
                 <div>
                     <button type="submit" id="add-btn">Agregar</button>
-                    <button type="submit" id="edit-btn" style="display: none;">Guardar</button>
+                    <button type="button" id="edit-btn" style="display: none;">Guardar</button>
                 </div>
             </form>
         </div>
