Corrección post entrega: Header

--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
         @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap');
     </style>
 </head>
-
-
-<body>
+<header>
     <div class="titulo">
         <h1>ESCALADA <br> VALLE DE LOS <br> CONDORES</h1>
     </div>
     <hr>
+</header>
+<body>
+
     <div class="grid">
 
         <div class="imagen"><img src="escalando.jpg" alt=""></div>
